--- a/index.html
+++ b/index.html
@@ -1305,7 +1305,7 @@
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
             <a href="" class="footer-logo">
-              Feane
+              Prime Feast
             </a>
             <p>
               Necesario, haciendo de este el primer generador real en Internet. Usa un diccionario de más de 200
